src/test/deca/context/invalid/provided/modulo_non_ints.deca
{float x = 3.2 % 1.6;}
